jilles      2007/03/27 21:36:28 UTC	(20070327-7991)
  Log:
  table: fix spacing in rows other than the first
  

  Changes:	Modified:
  +1 -1		trunk/src/table.c (File Modified) 


jilles      2007/03/27 16:58:54 UTC	(20070327-7989)
  Log:
  Remove some more redundant si->su checks and variables.
  

  Changes:	Modified:
  +2 -6		trunk/modules/protocol/bahamut.c (File Modified) 
  +2 -6		trunk/modules/protocol/ptlink.c (File Modified) 
  +4 -9		trunk/modules/protocol/shadowircd.c (File Modified) 
  +2 -6		trunk/modules/protocol/solidircd.c (File Modified) 
  +2 -6		trunk/modules/protocol/ultimate3.c (File Modified) 


jilles      2007/03/27 16:37:24 UTC	(20070327-7987)
  Log:
  charybdis/hybrid/ratbox:
  Remove various NULL checks already done via MSRC_ flags.
  Remove some variables containing copies of si->su or si->s.
  

  Changes:	Modified:
  +6 -20	trunk/modules/protocol/charybdis.c (File Modified) 
  +6 -20	trunk/modules/protocol/hybrid.c (File Modified) 
  +6 -20	trunk/modules/protocol/ratbox.c (File Modified) 


jilles      2007/03/25 20:13:20 UTC	(20070325-7985)
  Log:
  Don't allow those without user:mark privilege to
  sendpass marked nicknames.
  

  Changes:	Modified:
  +16 -0	trunk/modules/nickserv/sendpass.c (File Modified) 


jilles      2007/03/25 19:29:48 UTC	(20070325-7983)
  Log:
  Add  datarootdir = @datarootdir@  to all Makefile.in
  to make autoconf 2.60 happy. Older autoconf versions
  will neither expand nor use this.
  

  Changes:	Modified:
  +1 -0		trunk/Makefile.in (File Modified) 
  +1 -0		trunk/contrib/Makefile.in (File Modified) 
  +1 -0		trunk/modules/Makefile.in (File Modified) 
  +1 -0		trunk/modules/backend/Makefile.in (File Modified) 
  +1 -0		trunk/modules/chanserv/Makefile.in (File Modified) 
  +1 -0		trunk/modules/crypto/Makefile.in (File Modified) 
  +1 -0		trunk/modules/gameserv/Makefile.in (File Modified) 
  +1 -0		trunk/modules/global/Makefile.in (File Modified) 