@@ -31,12 +31,20 @@ static void os_cmd_tabletest(sourceinfo_t *si, int parc, char *parv[])
 	table_row_t *r = table_row_new(t);
 
 	table_cell_associate(r, "foo", "bar");
+	table_cell_associate(r, "F", "-");
 	table_cell_associate(r, "baz", "splork");
 
 	r = table_row_new(t);
 
-	table_cell_associate(r, "foo", "one");
-	table_cell_associate(r, "baz", "two");
+	table_cell_associate(r, "foo", "1");
+	table_cell_associate(r, "F", "+");
+	table_cell_associate(r, "baz", "2");
+
+	r = table_row_new(t);
+
+	table_cell_associate(r, "foo", "beagle4");
+	table_cell_associate(r, "F", "+");
+	table_cell_associate(r, "baz", "boo");
 
 	command_success_table(si, t);
 
