@@ -1,3 +1,15 @@
+jilles      2007/03/27 21:56:27 UTC	(20070327-7993)
+  Log:
+  table:
+  - Remove | between columns
+  - Add a line with dashes before and after the content, much
+    like most tables generated by commands
+  
+
+  Changes:	Modified:
+  +45 -3	trunk/src/table.c (File Modified) 
+
+
 jilles      2007/03/27 21:36:28 UTC	(20070327-7991)
   Log:
   table: fix spacing in rows other than the first
